edit header, tambah gambar, ganti resolusi

--- a/sass/section/media.scss
+++ b/sass/section/media.scss
@@ -57,6 +57,7 @@
 
         img {
             width: 10rem;
+            height: 10rem;
             border-radius: $borderradius-thin;
             margin-right: 6rem;
 
