--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -389,6 +389,7 @@ body {
   display: flex; }
   .description a img {
     width: 10rem;
+    height: 10rem;
     border-radius: 5px;
     margin-right: 6rem; }
     @media only screen and (max-width: 31.25em) {
