--- a/sass/section/media.scss
+++ b/sass/section/media.scss
@@ -64,6 +64,7 @@
             @include respond(phone4) {
                 //31.25 500px
                 width: 8rem;
+                height: 8rem;
                 margin-right: 3rem;
             }
         }
