--- a/sass/layout/layout.scss
+++ b/sass/layout/layout.scss
@@ -13,6 +13,7 @@
         height: 60vh;
         flex-direction: column-reverse;
         justify-content: center;
+        // background-color: $coloraccent-one;
         background-color: $colorprimary-bright;
     }
 
